tests/baselines/reference/classExtendsItselfIndirectly3.errors.txt
==== tests/cases/compiler/classExtendsItselfIndirectly_file1.ts (1 errors) ====
    class C extends E { foo: string; } // error
          ~
!!! classExtendsItselfIndirectly_file1.ts(1,7): error TS2100: Type 'C' recursively references itself as a base type.
    
==== tests/cases/compiler/classExtendsItselfIndirectly_file2.ts (0 errors) ====
    class D extends C { bar: string; }
    
==== tests/cases/compiler/classExtendsItselfIndirectly_file3.ts (0 errors) ====
    class E extends D { baz: number; }
    
==== tests/cases/compiler/classExtendsItselfIndirectly_file4.ts (1 errors) ====
    class C2<T> extends E2<T> { foo: T; } // error
          ~~
!!! classExtendsItselfIndirectly_file4.ts(1,7): error TS2100: Type 'C2<T>' recursively references itself as a base type.
    
==== tests/cases/compiler/classExtendsItselfIndirectly_file5.ts (0 errors) ====
    class D2<T> extends C2<T> { bar: T; }
    
==== tests/cases/compiler/classExtendsItselfIndirectly_file6.ts (0 errors) ====
    class E2<T> extends D2<T> { baz: T; }